# rust-tour

./: Cargo.toml
soc-gs/: Cargo.toml
src/: datatypes.rs  events.rs  lib.rs  main.rs
src/user_management/: login_service.rs  mod.rs  user_map.rs
tests/: data_test.rs  login_test.rs
