[package]
name = "soc-gs"
version = "0.1.1"
edition = "2024"
authors = ["Daniele Mazzotta"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }


[dev-dependencies]
# Dependencies needed only for development and testing
pretty_assertions = "1.4.1"