[package]
name = "soc-gs"
version = "0.1.1"
edition = "2024"
authors = ["Daniele Mazzotta"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
chrono = "0.4.43"
lazy_static = "1.5.0"


[dev-dependencies]
# Dependencies needed only for development and testing
pretty_assertions = "1.4.1"
